[package]
name = "shadowshout"
version = "0.1.0"
authors = ["Connor OHara <chuckhead7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sodiumoxide="0.2.7"
async-std="1.6.0"
toml="0.5.8"
serde = {version = "1.0.110", features = ["derive"]}
